--- a/iframe-poc.html
+++ b/iframe-poc.html
@@ -1,4 +1,9 @@
 tel protocal spoofing<br>
-<iframe src="http://attacked14.github.io/iframe.html" sandbox></iframe>
+
+<!-- iframe 1 -->
+<iframe src="https://attacked14.github.io/iframe.html" sandbox></iframe>
+
 <br>
-<iframe src=http://attacked14.github.io/iframe.html"></iframe>
+
+<!-- iframe 2 (tanpa sandbox, untuk cek dulu) -->
+<iframe src="https://attacked14.github.io/iframe.html"></iframe>
