--- a/iframe-poc.html
+++ b/iframe-poc.html
@@ -1,9 +1,9 @@
 tel protocal spoofing<br>
 
 <!-- iframe 1 -->
-<iframe src="https://attacked14.github.io/iframe.html" sandbox></iframe>
+<iframe src="https://attacked14.github.io/X/iframe.html" sandbox></iframe>
 
 <br>
 
 <!-- iframe 2 (tanpa sandbox, untuk cek dulu) -->
-<iframe src="https://attacked14.github.io/iframe.html"></iframe>
+<iframe src="https://attacked14.github.io/X/iframe.html"></iframe>
